--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
-<mat-toolbar>
-  <span>My Application</span>
-</mat-toolbar>
-<router-outlet></router-outlet>
+<mat-sidenav-container>
+  <mat-sidenav-content>
+      <app-header></app-header>
+      <main>
+          <div class="app-container">
+              <router-outlet></router-outlet> 
+          </div>
+      </main>
+  </mat-sidenav-content>
+</mat-sidenav-container>
