--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -1,24 +1,59 @@
 <mat-toolbar color="primary" class="mat-elevation-z4">
-  <!--<div>
+    <!--<div>
       <button mat-icon-button (click)="onGoBack()">
           <mat-icon>arrow_back</mat-icon>
       </button>
-  </div>-->
+  </div>
   <div>
       LOGO
-  </div>
-  <div fxFlex></div>
-  <div>
-      <ul fxLayout class="toolbar-items">
-          <li fxFlex class="toolbar-item"><a routerLink="/registrar-livro">Cadastrar Novo Livro</a></li>
-          <mat-divider [vertical]="true"></mat-divider>
-          <li fxFlex class="toolbar-item"><a routerLink="/registrar-usuario">Cadastrar Novo Usuário</a></li>
-          <mat-divider [vertical]="true"></mat-divider>
-          <li fxFlex class="toolbar-item"><a routerLink="/lista-livros">Lista de Livros</a></li>
-          <mat-divider [vertical]="true"></mat-divider>
-          <li fxFlex class="toolbar-item"><a routerLink="/lista-usuarios">Lista de Usuários</a></li>
-          <mat-divider [vertical]="true"></mat-divider>
-          <li fxFlex class="toolbar-item"><a style="cursor: pointer" (click)="onLogout()">Sair</a></li>
-      </ul>
-  </div>
+  </div>-->
+    <div fxFlex></div>
+    <div>
+        <ul fxLayout class="toolbar-items">
+            <!--<li fxFlex><button mat-button [matMenuTriggerFor]="employees" class="toolbar-item">Usuários</button></li>-->
+            <li fxFlex>
+                <button mat-button [matMenuTriggerFor]="users" class="toolbar-item">Usuários</button>
+            </li>
+            <li fxFlex>
+                <button mat-button [matMenuTriggerFor]="news" class="toolbar-item">Notícias</button>
+            </li>
+            <li fxFlex>
+                <button mat-button [matMenuTriggerFor]="books" class="toolbar-item">Livros</button>
+            </li>
+            <li fxFlex>
+                <button mat-button [matMenuTriggerFor]="equips" class="toolbar-item">Equipamentos</button>
+            </li>
+            <li fxFlex>
+                <button mat-button [matMenuTriggerFor]="rooms" class="toolbar-item">Salas</button>
+            </li>
+            <li fxFlex>
+                <button mat-button class="toolbar-item" (click)="onLogout()">Sair</button>
+            </li>
+        </ul>
+    </div>
 </mat-toolbar>
+
+<mat-menu #users="matMenu">
+    <button mat-menu-item (click)="onGoToUserList()"><mat-icon>people</mat-icon>Lista de Usuários</button>
+    <button mat-menu-item (click)="onGoToRegisterUser()"><mat-icon>person_add</mat-icon>Registrar Novo Usuário</button>
+</mat-menu>
+
+<mat-menu #news="matMenu">
+    <button mat-menu-item (click)="onGoToNewsList()"><mat-icon>comment</mat-icon>Lista de Notícias</button>
+    <button mat-menu-item (click)="onGoToRegisterNews()"><mat-icon>add_comment</mat-icon>Postar Nova Notícia</button>
+</mat-menu>
+
+<mat-menu #books="matMenu">
+    <button mat-menu-item (click)="onGoToBookList()"><mat-icon>library_books</mat-icon>Lista de Livros</button>
+    <button mat-menu-item (click)="onGoToRegisterBooks()"><mat-icon>library_add</mat-icon>Registrar Novo Livro</button>
+</mat-menu>
+
+<mat-menu #equips="matMenu">
+    <button mat-menu-item (click)="onGoToEquipList()"><mat-icon>library_music</mat-icon>Lista de Equipamentos</button>
+    <button mat-menu-item (click)="onGoToRegisterEquip()"><mat-icon>library_add</mat-icon>Registrar Novo Equipamento</button>
+</mat-menu>
+
+<mat-menu #rooms="matMenu">
+    <button mat-menu-item (click)="onGoToRoomList()"><mat-icon>place</mat-icon>Lista de Salas</button>
+    <button mat-menu-item (click)="onGoToRegisterRoom()"><mat-icon>add_location</mat-icon>Registrar Nova Sala</button>
+</mat-menu>
