--- a/src/app/book/book-list/book-list.component.html
+++ b/src/app/book/book-list/book-list.component.html
@@ -1,3 +1,44 @@
-<p>
-  book-list works!
-</p>
+<div>
+  <h1 id="title">Lista de Livros</h1>
+</div>
+
+<div class="container mat-elevation-z4">
+  <div class="header mat-elevation-z2">
+    <mat-form-field>
+      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Pesquisar">
+    </mat-form-field>
+  </div>
+  <mat-table #table [dataSource]="dataSource" matSort>
+
+    <ng-container matColumnDef="title">
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Título </mat-header-cell>
+      <mat-cell *matCellDef="let book"> {{book.title}} </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="author">
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Autor </mat-header-cell>
+      <mat-cell *matCellDef="let book"> {{book.author}} </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="gender">
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Gênero </mat-header-cell>
+      <mat-cell *matCellDef="let book"> {{book.gender}} </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="available">
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Disponíveis </mat-header-cell>
+      <mat-cell *matCellDef="let book"> {{book.available | number}} </mat-cell>
+    </ng-container>
+
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let book; columns: displayedColumns;"
+              class="row"
+              (click)="onGoToProfile(book.id)">
+    </mat-row>
+  </mat-table>
+
+  <mat-paginator #paginator
+                 [pageSize]="5"
+                 [showFirstLastButtons]="true">
+  </mat-paginator>
+</div>
