--- a/src/app/equip/equip-list/equip-list.component.html
+++ b/src/app/equip/equip-list/equip-list.component.html
@@ -1,3 +1,34 @@
-<p>
-  equip-list works!
-</p>
+<div>
+  <h1 id="title">Lista de Equipamentos</h1>
+</div>
+
+<div class="container mat-elevation-z4">
+  <div class="header mat-elevation-z2">
+    <mat-form-field>
+      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Pesquisar">
+    </mat-form-field>
+  </div>
+  <mat-table #table [dataSource]="dataSource" matSort>
+
+    <ng-container matColumnDef="name">
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Nome </mat-header-cell>
+      <mat-cell *matCellDef="let equip"> {{equip.name}} </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="type">
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Tipo </mat-header-cell>
+      <mat-cell *matCellDef="let equip"> {{equip.type}} </mat-cell>
+    </ng-container>
+
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let equip; columns: displayedColumns;"
+              class="row"
+              (click)="onGoToProfile(equip.id)">
+    </mat-row>
+  </mat-table>
+
+  <mat-paginator #paginator
+                 [pageSize]="5"
+                 [showFirstLastButtons]="true">
+  </mat-paginator>
+</div>
