--- a/src/app/news/news-list/news-list.component.html
+++ b/src/app/news/news-list/news-list.component.html
@@ -1,3 +1,39 @@
-<p>
-  news-list works!
-</p>
+<div>
+  <h1 id="title">Lista de Notícias</h1>
+</div>
+
+<div class="container mat-elevation-z4">
+  <div class="header mat-elevation-z2">
+    <mat-form-field>
+      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Pesquisar">
+    </mat-form-field>
+  </div>
+  <mat-table #table [dataSource]="dataSource" matSort>
+
+    <ng-container matColumnDef="title">
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Título </mat-header-cell>
+      <mat-cell *matCellDef="let news"> {{news.title}} </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="date">
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Data </mat-header-cell>
+      <mat-cell *matCellDef="let news"> {{news.date}} </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="time">
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Hora </mat-header-cell>
+      <mat-cell *matCellDef="let news"> {{news.time}} </mat-cell>
+    </ng-container>
+
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let news; columns: displayedColumns;"
+              class="row"
+              (click)="onGoToProfile(news.id)">
+    </mat-row>
+  </mat-table>
+
+  <mat-paginator #paginator
+                 [pageSize]="5"
+                 [showFirstLastButtons]="true">
+  </mat-paginator>
+</div>
