registrar livro add

--- a/src/app/book/book-register/book-register.component.html
+++ b/src/app/book/book-register/book-register.component.html
@@ -1,3 +1,44 @@
-<p>
-  book-register works!
-</p>
+<section class="signin-form" fxLayoutAlign="center" fxLayoutGap="15px" style="margin-top: 20px;">
+  <mat-card fxFlex="600px">
+    <form fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="15px" #f="ngForm" (ngSubmit)="onSubmit(f)">
+      <mat-card-title>Registrar Novo Livro</mat-card-title>
+
+      <mat-form-field class="v-input">
+        <input type="text" matInput placeholder="Título do Livro" ngModel name="title" required #bnInput="ngModel">
+        <mat-error *ngIf="bnInput.hasError('required')">Você deve colocar o nome do livro.</mat-error>
+      </mat-form-field>
+
+      <mat-form-field class="v-input">
+        <input type="text" matInput placeholder="Autor do Livro" ngModel name="author" required #bdInput="ngModel">
+        <mat-error *ngIf="bdInput.hasError('required')">Você deve colocar um autor.</mat-error>
+      </mat-form-field>
+
+      <mat-form-field class="v-input">
+        <input type="text" matInput placeholder="Editora do Livro" ngModel name="editor">
+      </mat-form-field>
+
+      <mat-form-field class="v-input">
+        <input type="text" matInput placeholder="Gênero do Livro" ngModel name="gender" required #bgInput="ngModel">
+        <mat-error *ngIf="bgInput.hasError('required')">Você deve colocar um autor.</mat-error>
+      </mat-form-field>
+
+      <div style="width: 400px;" fxLayout fxLayoutGap="20px">
+
+        <mat-form-field class="h-input">
+          <input type="text" matInput placeholder="Edição do Livro" ngModel name="edition">
+        </mat-form-field>
+
+        <mat-form-field class="h-input">
+          <input type="number" matInput placeholder="Ano da Edição" ngModel name="year">
+        </mat-form-field>
+
+        <mat-form-field class="h-input">
+          <input type="number" matInput placeholder="Nº de Exemplares" ngModel name="quantity" required #bnInput="ngModel">
+          <mat-error *ngIf="bdInput.hasError('required')">Você deve colocar o nº de exemplares.</mat-error>
+        </mat-form-field>
+      </div>
+
+      <button type="submit" mat-raised-button color="primary" [disabled]="f.invalid">Entrar</button>
+    </form>    
+  </mat-card>
+</section>
