--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -45,7 +45,7 @@
 
 <mat-menu #books="matMenu">
     <button mat-menu-item (click)="onGoToBookList()"><mat-icon>library_books</mat-icon>Lista de Livros</button>
-    <button mat-menu-item (click)="onGoToRegisterBooks()"><mat-icon>library_add</mat-icon>Registrar Novo Livro</button>
+    <button mat-menu-item (click)="onGoToRegisterBook()"><mat-icon>library_add</mat-icon>Registrar Novo Livro</button>
 </mat-menu>
 
 <mat-menu #equips="matMenu">
