add registrar room

--- a/src/app/room/room-register/room-register.component.html
+++ b/src/app/room/room-register/room-register.component.html
@@ -1,3 +1,14 @@
-<p>
-  room-register works!
-</p>
+<section class="signin-form" fxLayoutAlign="center" fxLayoutGap="15px" style="margin-top: 20px;">
+  <mat-card fxFlex="600px">
+    <form fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="15px" #f="ngForm" (ngSubmit)="onSubmit(f)">
+      <mat-card-title>Registrar Novo Livro</mat-card-title>
+
+      <mat-form-field class="v-input">
+        <input type="text" matInput placeholder="Nome da Sala" ngModel name="name" required #rnInput="ngModel">
+        <mat-error *ngIf="rnInput.hasError('required')">Você deve colocar o nome da sala.</mat-error>
+      </mat-form-field>
+
+      <button type="submit" mat-raised-button color="primary" [disabled]="f.invalid">Registrar</button>
+    </form>    
+  </mat-card>
+</section>
