--- a/src/app/room/room-register/room-register.component.html
+++ b/src/app/room/room-register/room-register.component.html
@@ -1,7 +1,7 @@
 <section class="signin-form" fxLayoutAlign="center" fxLayoutGap="15px" style="margin-top: 20px;">
   <mat-card fxFlex="600px">
     <form fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="15px" #f="ngForm" (ngSubmit)="onSubmit(f)">
-      <mat-card-title>Registrar Novo Livro</mat-card-title>
+      <mat-card-title>Registrar Nova Sala</mat-card-title>
 
       <mat-form-field class="v-input">
         <input type="text" matInput placeholder="Nome da Sala" ngModel name="name" required #rnInput="ngModel">
