--- a/src/app/book/book-loan/user-validation/user-validation.component.css
+++ b/src/app/book/book-loan/user-validation/user-validation.component.css
@@ -2,12 +2,10 @@
     width: 400px;
 }
 
-.h-input {
-    width: 85px;
-}
-
-.bp-btn {
-    width: 200px;
+.btn-center {
+    margin: 0 auto;
+    display: block;
+    margin-top: 10px;
 }
 
 #overlay {
@@ -22,4 +20,12 @@
     background-color: rgba(255, 255, 255, 0.5);
     z-index: 2;
     cursor: pointer;
+}
+
+.spinner{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
 }
