--- a/src/app/news/news-register/news-register.component.html
+++ b/src/app/news/news-register/news-register.component.html
@@ -1,7 +1,6 @@
 <section class="signin-form" fxLayoutAlign="center" fxLayoutGap="15px" style="margin-top: 20px;">
   <mat-card fxFlex="600px">
     <form fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="15px" #f="ngForm" (ngSubmit)="onSubmit(f)">
-      <mat-card-title>Registrar Novo Livro</mat-card-title>
 
       <mat-form-field class="v-input">
         <input type="text" matInput placeholder="Título da Notícia" ngModel name="title" required #bnInput="ngModel">
@@ -9,7 +8,10 @@
       </mat-form-field>
 
       <mat-form-field class="v-input">
-        <textarea type="text" matInput placeholder="Corpo da Notícia" ngModel name="body" required #bdInput="ngModel"></textarea>
+        <textarea type="text" matInput placeholder="Corpo da Notícia" 
+          rows="14" ngModel name="body" required #bdInput="ngModel" style="text-align: justify;
+          white-space: normal;">
+        </textarea>
         <mat-error *ngIf="bdInput.hasError('required')">Você deve colocar um corpo da notícia.</mat-error>
       </mat-form-field>
 
