--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -1,11 +1,3 @@
-<div id="overlay">
-  <mat-spinner class="spinner" [color]="primary"></mat-spinner>
-</div>
-
-<div>
-  <h1 id="title">Lista de Usuários</h1>
-</div>
-
 <div class="container mat-elevation-z4">
   <mat-tab-group>
 
@@ -43,7 +35,7 @@
         </ng-container>
 
         <mat-header-row *matHeaderRowDef="sDisplayedColumns"></mat-header-row>
-        <mat-row *matRowDef="let student; columns: sDisplayedColumns;" class="row" (click)="onGoToProfile(student.id)">
+        <mat-row *matRowDef="let student; columns: sDisplayedColumns;" class="row" (click)="onGoToProfile(student.id, 'student')">
         </mat-row>
       </mat-table>
 
@@ -85,7 +77,7 @@
         </ng-container>
 
         <mat-header-row *matHeaderRowDef="tDisplayedColumns"></mat-header-row>
-        <mat-row *matRowDef="let teacher; columns: tDisplayedColumns;" class="row" (click)="onGoToProfile(teacher.id)">
+        <mat-row *matRowDef="let teacher; columns: tDisplayedColumns;" class="row" (click)="onGoToProfile(teacher.id, 'teacher')">
         </mat-row>
       </mat-table>
 
@@ -122,7 +114,7 @@
         </ng-container>
 
         <mat-header-row *matHeaderRowDef="eDisplayedColumns"></mat-header-row>
-        <mat-row *matRowDef="let staff; columns: eDisplayedColumns;" class="row" (click)="onGoToProfile(staff.id)">
+        <mat-row *matRowDef="let staff; columns: eDisplayedColumns;" class="row" (click)="onGoToProfile(staff.id, 'staff')">
         </mat-row>
       </mat-table>
 
