--- a/src/app/news/news-register/news-register.component.html
+++ b/src/app/news/news-register/news-register.component.html
@@ -1,6 +1,6 @@
 <section class="signin-form" fxLayoutAlign="center" fxLayoutGap="15px" style="margin-top: 20px;">
   <mat-card fxFlex="600px">
-    <form fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="15px" #f="ngForm" (ngSubmit)="onSubmit(f)">
+    <form fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="15px" #f="ngForm" (ngSubmit)="onSubmit()">
 
       <mat-form-field class="v-input">
         <input type="text" matInput placeholder="Título da Notícia" ngModel name="title" required #bnInput="ngModel">
