--- a/src/app/news/news-profile/news-profile.component.html
+++ b/src/app/news/news-profile/news-profile.component.html
@@ -23,7 +23,10 @@
         </textarea>
       </mat-form-field>
 
-      <button mat-raised-button color="primary" class="bp-btn">Editar Notícia</button>
+      <div fxLayout="row" fxLayoutGap="15px">
+        <button (click)="onCancel()" mat-button color="primary">Voltar</button>
+        <button mat-raised-button color="primary" [disabled]="1 == 1">Editar Notícia</button>
+      </div>
     </form>
   </mat-card>
 </section>
