--- a/src/app/book/book-profile/book-profile.component.html
+++ b/src/app/book/book-profile/book-profile.component.html
@@ -38,10 +38,12 @@
         <mat-form-field class="h-input">
           <input type="number" matInput placeholder="Disponíveis" readonly value="5">
         </mat-form-field>
-
       </div>
 
-      <button mat-raised-button color="primary" class="bp-btn">Editar Livro</button>
+      <div fxLayout="row" fxLayoutGap="15px">
+        <button (click)="onCancel()" mat-button color="primary">Voltar</button>
+        <button mat-raised-button color="primary" [disabled]="1 == 1">Editar Livro</button>
+      </div>
     </form>    
   </mat-card>
 </section>
