--- a/src/app/user/user-profile/user-profile.component.html
+++ b/src/app/user/user-profile/user-profile.component.html
@@ -1,8 +1,7 @@
 <section class="signin-form" fxLayoutAlign="center" fxLayoutGap="15px" style="margin-top: 20px;">
   <mat-card fxFlex="600px">
 
-    <form fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="15px" *ngIf="type == 'student'">
-      
+    <form fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="15px" *ngIf="type == 'student'">     
       <mat-form-field class="v-input">
         <input type="text" matInput placeholder="Nome do Aluno" readonly value="Nome do Aluno">
       </mat-form-field>
@@ -22,9 +21,12 @@
       <mat-form-field class="v-input">
         <input type="text" matInput placeholder="Email do Aluno" readonly value="Email do Aluno">
       </mat-form-field>
-
-      <button mat-raised-button color="primary" class="bp-btn" [disabled]="1 == 1">Editar Aluno</button>
-      <button mat-raised-button color="primary" class="bp-btn" (click)="goToDevolution()">Ver Livros Alugados</button>
+   
+      <div fxLayout="row" fxLayoutGap="15px">
+        <button (click)="onCancel()" mat-button color="primary">Voltar</button>
+        <button mat-raised-button color="primary" [disabled]="1 == 1">Editar Aluno</button>
+        <button mat-raised-button color="primary" (click)="goToDevolution()">Ver Livros Alugados</button>
+      </div>
     </form>
 
     <form fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="15px" *ngIf="type == 'teacher'">
@@ -73,8 +75,11 @@
         <input type="text" matInput placeholder="Email do Servidor" readonly value="Email do Servidor">
       </mat-form-field>
 
-      <button mat-raised-button color="primary" class="bp-btn" [disabled]="1 == 1">Editar Servidor</button>
-      <button mat-raised-button color="primary" class="bp-btn" (click)="goToDevolution()">Ver Livros Alugados</button>
+      <div fxLayout="row" fxLayoutGap="15px">
+        <button (click)="onCancel()" mat-button color="primary">Voltar</button>
+        <button mat-raised-button color="primary" [disabled]="1 == 1">Editar Aluno</button>
+        <button mat-raised-button color="primary" (click)="goToDevolution()">Ver Livros Alugados</button>
+      </div>
     </form>
   </mat-card>
 </section>
