--- a/src/app/book/book-profile/book-profile.component.html
+++ b/src/app/book/book-profile/book-profile.component.html
@@ -1,4 +1,4 @@
-<section class="signin-form" fxLayoutAlign="center" fxLayoutGap="15px" style="margin-top: 20px;">
+<section class="signin-form" fxLayoutAlign="center" fxLayoutGap="15px" style="margin-top: 5vh;">
   <mat-card fxFlex="600px">
 
     <!-- Read-only form -->
