--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -1,4 +1,4 @@
-<div class="container mat-elevation-z4">
+<div class="container mat-elevation-z4" style="margin-top: 5vh;">
   <mat-tab-group>
 
     <mat-tab label="Alunos">
