--- a/src/app/news/news-list/news-list.component.html
+++ b/src/app/news/news-list/news-list.component.html
@@ -1,4 +1,4 @@
-<div class="container mat-elevation-z4">
+<div class="container mat-elevation-z4" style="margin-top: 5vh;">
   <div class="header mat-elevation-z2">
     <mat-form-field>
       <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Pesquisar">
