--- a/src/app/book/book-register/book-register.component.html
+++ b/src/app/book/book-register/book-register.component.html
@@ -1,4 +1,4 @@
-<section class="signin-form" fxLayoutAlign="center" fxLayoutGap="15px" style="margin-top: 5vh;"">
+<section class="signin-form" fxLayoutAlign="center" fxLayoutGap="15px" style="margin-top: 5vh;">
   <mat-card fxFlex="600px">
     <form fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="15px" #f="ngForm" (ngSubmit)="onSubmit(f)">
 
